:sparkles: only need reflection for patch method